<resources>
    <string name="app_name">Skifahrt</string>
    <string name="level_name_one">Level 1</string>
    <string name="level_name_two">Level 2</string>
    <string name="level_name_three">Level 3</string>
    <string name="level_name_four">Level 4</string>

    <string name="level_name_one_long">Level 1: Bewegung durch Kippen</string>
    <string name="level_name_two_long">Level 2: Bewegung durch Sprachsteuerung (hoch, runter, rechts)</string>
    <string name="level_name_three_long">Level 3: Bewegung durch Wischen</string>
    <string name="level_name_four_long">Level 4: 2-Spieler-Modus via Bluetooth</string>

    <string name="level_lost_headline">Level verloren!</string>
    <string name="level_lost_refresh">Erneut versuchen</string>
    <string name="level_win_headline">Level gewonnen!</string>
    <string name="level_win_button">Nächstes Level</string>

    //Femke test ab hier

    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
</resources>
