<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_name_one"
        android:id="@+id/buttonLevel1"
        android:layout_above="@+id/buttonLevel2"
        android:layout_centerHorizontal="true"
        android:onClick="openLevelOne"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_name_two"
        android:id="@+id/buttonLevel2"
        android:layout_above="@+id/buttonLevel3"
        android:layout_centerHorizontal="true"
        android:onClick="openLevelTwo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_name_three"
        android:id="@+id/buttonLevel3"
        android:layout_above="@+id/buttonLevel4"
        android:layout_centerHorizontal="true"
        android:onClick="openLevelThree"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_name_four"
        android:id="@+id/buttonLevel4"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="openLevelFour"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
